# GrabPic

./: .gitignore  README.md  cors.json  main.py  pyproject.toml  requirements.txt
frontend/: .gitignore  CONFIGURATION.md  README.md  SETUP.md  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/models/: auth_model.dart  image_model.dart  job_status_model.dart  models.dart  space_model.dart
frontend/lib/providers/: auth_provider.dart  image_provider.dart  providers.dart  space_provider.dart
frontend/lib/screens/: face_auth_screen.dart  home_screen.dart  landing_screen.dart  space_screens.dart
frontend/lib/services/: api_service.dart  services.dart  storage_service.dart
frontend/lib/utils/: app_theme.dart  constants.dart
frontend/web/: index.html  manifest.json
frontend/web/icons/: README.md
qdrant_storage/: raft_state.json
qdrant_storage/collections/new_collection/: config.json
services/api/: main.py  pyproject.toml  requirements.txt
services/face_processor/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
services/face_processor/src_face_service/controller/: controller.py  face_auth.py
services/face_processor/src_face_service/db/: db.py
services/face_processor/src_face_service/model/: face_auth_model.py
services/face_processor/src_face_service/redis_queue/: queue_config.py
services/face_processor/src_face_service/route/: router.py
services/redis-upstash/: .dockerignore  pyproject.toml  redis_asyn_conn.py  requirements.txt  worker.py
src/models/: models.py
src/utils/: db.py
tests/: pyproject.toml  test_app.py
(+28 files in other folders)
